--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -74,6 +74,8 @@ CONFIG_PACKAGE_luci-app-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 # > 磁盘管理大师
 CONFIG_PACKAGE_luci-app-diskman=y
+# > 文件管理
+CONFIG_PACKAGE_luci-app-filebrowser=y
 # > 文件传输
 CONFIG_PACKAGE_luci-app-filetransfer=y
 # > 防火墙
@@ -122,6 +124,9 @@ CONFIG_PACKAGE_luci-app-serverchan=y
 
 # > KamiWrtBot
 CONFIG_PACKAGE_KamiWrtBot=y
+
+# > Speedtest
+CONFIG_PACKAGE_luci-app-netspeedtest=y
 
 # > 命令行上传下载
 CONFIG_PACKAGE_lrzsz=y
