--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -100,6 +100,8 @@ CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ttyd=n
 # > Web管理页面设置
 CONFIG_PACKAGE_luci-app-webadmin=y
+# > WireGuard
+CONFIG_PACKAGE_luci-app-wireguard=y
 # > 实时流量监测（依赖于luci-app-nlbwmon）
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # > 远程SSH访问
@@ -127,6 +129,7 @@ CONFIG_PACKAGE_KamiWrtBot=y
 
 # > Speedtest
 CONFIG_PACKAGE_luci-app-netspeedtest=y
+CONFIG_PACKAGE_python3=y
 
 # > 命令行上传下载
 CONFIG_PACKAGE_lrzsz=y
@@ -164,7 +167,6 @@ CONFIG_PACKAGE_luci-lib-ipkg=y
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-# CONFIG_PACKAGE_luci-app-wireguard is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
