新增编译定时插件和家长控制

--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -74,8 +74,6 @@ CONFIG_PACKAGE_luci-app-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 # > 磁盘管理大师
 CONFIG_PACKAGE_luci-app-diskman=y
-# > 文件管理
-CONFIG_PACKAGE_luci-app-filebrowser=y
 # > 文件传输
 CONFIG_PACKAGE_luci-app-filetransfer=y
 # > 防火墙
@@ -134,21 +132,22 @@ CONFIG_PACKAGE_python3=y
 # > 命令行上传下载
 CONFIG_PACKAGE_lrzsz=y
 
+# > 文件管理
+CONFIG_PACKAGE_luci-app-filebrowser=y
+
+# 定时插件
+CONFIG_PACKAGE_luci-app-autotimeset=y
+
+# 家长控制
+CONFIG_PACKAGE_luci-app-parentcontrol=y
+
 # > 应用过滤
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_oaf=y
 CONFIG_PACKAGE_open-app-filter=y
 
-# > Python3
-CONFIG_PACKAGE_python3-pip=n
-
 # > Adguard Home
 CONFIG_PACKAGE_luci-app-adguardhome=n
-
-# > iStore & Quickstart
-CONFIG_PACKAGE_luci-app-quickstart=n
-CONFIG_PACKAGE_luci-app-store=n
-CONFIG_PACKAGE_quickstart=n
 
 # 依赖
 CONFIG_PACKAGE_curl=y
