--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -60,7 +60,7 @@ CONFIG_PACKAGE_kmod-usb3=y
 # > 访问时间控制
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # > aria2下载
-CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-aria2=n
 # > IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
 # > 自动重启
@@ -130,7 +130,7 @@ CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_python3=y
 
 # > 命令行上传下载
-CONFIG_PACKAGE_lrzsz=y
+CONFIG_PACKAGE_lrzsz=n
 
 # > 文件管理
 CONFIG_PACKAGE_luci-app-filebrowser=y
