--- a/.github/workflows/KamiWrtKai.yml
+++ b/.github/workflows/KamiWrtKai.yml
@@ -24,7 +24,7 @@ env:
   UPLOAD_PACKAGES: false
   UPLOAD_RELEASE: true
   UPLOAD_ARTIFACTS: false
-  TELEGRAM_NOTIFICATION: true
+  TELEGRAM_NOTIFICATION: false
   DELETE_OLD_REALEASE: true
   TZ: Asia/Shanghai
 
